--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -1,112 +1,133 @@
-name: Deploy Production (2-Phase)
+name: Deploy to Server (Modified)
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore:
-      - 'IAs-Loto/**'
-      - 'ias/**'
-      - '*.md'
-      - 'README.md'
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Deploy to Server via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: 212.227.230.103
-          username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            echo "=== INICIO: DESPLIEGUE EN DOS FASES ==="
-            # Backup del archivo deploy-modified.yml antes de modificarlo
-            cp .github/workflows/deploy-modified.yml .github/workflows/deploy-modified.yml.backup
-            echo "✅ Backup de deploy-modified.yml creado en .github/workflows/deploy-modified.yml.backup"
-            # 1. Navegar al directorio del proyecto
+    - uses: actions/checkout@v2
+    
+    - name: Deploy to server
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        port: 22
+        script: |
+          cd /var/www/tienda-web-lotoAI-1
+          git pull origin main
+          npm install
+          npm run build
+          
+          # Actualizar DataFrames de lotería
+          python3 scripts/update_lottery_dataframes.py
+          
+          # Reiniciar servicios si es necesario
+          sudo systemctl restart nginx
             cd /var/www/tienda-web-lotoAI-1 || exit 1
             
-            # 1.5. Respaldar archivos de configuración del servidor
-            echo "--- Fase 1.5: Respaldando archivos de configuración del servidor ---"
-            if [ -f ".env" ]; then
-              cp .env .env.backup
-              echo "✅ Archivo .env respaldado"
-            else
-              echo "⚠️  Archivo .env no encontrado para respaldar"
-            fi
-            if [ -f ".env.production" ]; then
-              cp .env.production .env.production.backup
-              echo "✅ Archivo .env.production respaldado"
-            fi
+            # 2. Respaldar archivos críticos (simplificado)
+            echo "--- Fase 2: Respaldando archivos críticos ---"
+            # Crear directorio de respaldos si no existe
+            mkdir -p .deploy-backups
             
-            # Respaldar archivos críticos del scraper
-            if [ -f "src/assets/botes.json" ]; then
-              cp src/assets/botes.json src/assets/botes.json.backup
-              echo "✅ Archivo botes.json (src) respaldado"
-            else
-              echo "⚠️  Archivo src/assets/botes.json no encontrado para respaldar"
-            fi
-            if [ -f "src/assets/lottery-data.json" ]; then
-              cp src/assets/lottery-data.json src/assets/lottery-data.json.backup
-              echo "✅ Archivo lottery-data.json (src) respaldado"
-            else
-              echo "⚠️  Archivo src/assets/lottery-data.json no encontrado para respaldar"
-            fi
-            if [ -f "dist/tienda-web-loto-ai/browser/assets/botes.json" ]; then
-              # Crear directorio temporal para respaldos fuera de dist/
-              mkdir -p .deploy-backups
-              cp dist/tienda-web-loto-ai/browser/assets/botes.json .deploy-backups/botes.json.backup
-              echo "✅ Archivo botes.json (dist) respaldado en .deploy-backups/"
-            else
-              echo "⚠️  Archivo dist botes.json no encontrado para respaldar"
-            fi
-            if [ -f "dist/tienda-web-loto-ai/browser/assets/lottery-data.json" ]; then
-              mkdir -p .deploy-backups
-              cp dist/tienda-web-loto-ai/browser/assets/lottery-data.json .deploy-backups/lottery-data.json.backup
-              echo "✅ Archivo lottery-data.json (dist) respaldado en .deploy-backups/"
-            else
-              echo "⚠️  Archivo dist lottery-data.json no encontrado para respaldar"
-            fi
+            # Respaldar .env
+            [ -f ".env" ] && cp .env .deploy-backups/.env.backup && echo "✅ .env respaldado"
+            [ -f ".env.production" ] && cp .env.production .deploy-backups/.env.production.backup && echo "✅ .env.production respaldado"
             
-            # Respaldar configuraciones específicas del servidor IA
-            if [ -f "archivos-para-servidor/server-ia-unificado.py" ]; then
-              cp archivos-para-servidor/server-ia-unificado.py archivos-para-servidor/server-ia-unificado.py.backup
-              echo "✅ Archivo server-ia-unificado.py (archivos-para-servidor) respaldado"
-            else
-              echo "⚠️  Archivo archivos-para-servidor/server-ia-unificado.py no encontrado para respaldar"
-            fi
-            if [ -f "server-ia-unificado.py" ]; then
-              cp server-ia-unificado.py server-ia-unificado.py.backup
-              echo "✅ Archivo server-ia-unificado.py (raíz) respaldado"
-            else
-              echo "⚠️  Archivo server-ia-unificado.py (raíz) no encontrado para respaldar"
-            fi
+            # Respaldar JSONs del scraper
+            [ -f "src/assets/botes.json" ] && cp src/assets/botes.json .deploy-backups/botes.json.backup && echo "✅ botes.json respaldado"
+            [ -f "src/assets/lottery-data.json" ] && cp src/assets/lottery-data.json .deploy-backups/lottery-data.json.backup && echo "✅ lottery-data.json respaldado"
             
-            # 2. Actualizar desde GitHub
-            echo "--- Fase 2: Actualizando código fuente ---"
+            # 3. Actualizar desde GitHub
+            echo "--- Fase 3: Actualizando código fuente ---"
             git fetch origin main
             git reset --hard origin/main
-            git pull origin main
             
-            # 2.5. Restaurar archivos de configuración del servidor
-            echo "--- Fase 2.5: Restaurando archivos de configuración del servidor ---"
-            if [ -f ".env.backup" ]; then
-              cp .env.backup .env
-              rm .env.backup
-              echo "✅ Archivo .env restaurado"
+            # 4. Restaurar archivos críticos
+            echo "--- Fase 4: Restaurando archivos del servidor ---"
+            [ -f ".deploy-backups/.env.backup" ] && cp .deploy-backups/.env.backup .env && echo "✅ .env restaurado"
+            [ -f ".deploy-backups/.env.production.backup" ] && cp .deploy-backups/.env.production.backup .env.production && echo "✅ .env.production restaurado"
+            [ -f ".deploy-backups/botes.json.backup" ] && cp .deploy-backups/botes.json.backup src/assets/botes.json && echo "✅ botes.json restaurado"
+            [ -f ".deploy-backups/lottery-data.json.backup" ] && cp .deploy-backups/lottery-data.json.backup src/assets/lottery-data.json && echo "✅ lottery-data.json restaurado"
+            
+            # 5. Verificar variables de entorno
+            echo "--- Fase 5: Verificando configuración ---"
+            if [ -f ".env" ] && grep -q "STRIPE_SECRET_KEY" .env; then
+              echo "✅ Configuración verificada"
             else
-              echo "❌ No se pudo restaurar .env - archivo de respaldo no encontrado"
+              echo "❌ Error: STRIPE_SECRET_KEY no encontrada"
+              exit 1
             fi
-            if [ -f ".env.production.backup" ]; then
-              cp .env.production.backup .env.production
-              rm .env.production.backup
-              echo "✅ Archivo .env.production restaurado"
+            
+            # 6. Instalar dependencias
+            echo "--- Fase 6: Instalando dependencias ---"
+            npm ci --production=false || npm install --production=false
+            
+            # 7. Compilar Backend
+            echo "--- Fase 7: Compilando Backend ---"
+            cd src/backend
+            npm ci || npm install
+            npm run build
+            cd /var/www/tienda-web-lotoAI-1
+            [ ! -f "src/backend/dist/index.js" ] && echo "❌ Error: Backend no compilado" && exit 1
+            echo "✅ Backend compilado"
+            
+            # 8. Compilar Frontend (con optimización de memoria)
+            echo "--- Fase 8: Compilando Frontend ---"
+            # Limpiar dist anterior
+            rm -rf dist/
+            
+            # Compilar con memoria optimizada
+            NODE_OPTIONS="--max-old-space-size=3072" npx ng build --configuration=production
+            [ $? -ne 0 ] && echo "❌ Error: Frontend no compilado" && exit 1
+            echo "✅ Frontend compilado"
+            
+            # 9. Restaurar JSONs en dist
+            echo "--- Fase 9: Restaurando JSONs en dist ---"
+            mkdir -p dist/tienda-web-loto-ai/browser/assets/
+            [ -f ".deploy-backups/botes.json.backup" ] && cp .deploy-backups/botes.json.backup dist/tienda-web-loto-ai/browser/assets/botes.json
+            [ -f ".deploy-backups/lottery-data.json.backup" ] && cp .deploy-backups/lottery-data.json.backup dist/tienda-web-loto-ai/browser/assets/lottery-data.json
+            
+            # 10. Reiniciar servicios PM2
+            echo "--- Fase 10: Reiniciando servicios ---"
+            pm2 stop all 2>/dev/null || true
+            pm2 delete all 2>/dev/null || true
+            pm2 start ecosystem.config.js --env production
+            pm2 save
+            echo "✅ Servicios PM2 reiniciados"
+            
+            # 11. Verificar servicios
+            echo "--- Fase 11: Verificando servicios ---"
+            sleep 3
+            pm2 list
+            
+            # 12. Actualizar NGINX
+            echo "--- Fase 12: Actualizando NGINX ---"
+            cp nginx.conf /etc/nginx/sites-available/loto-ia.com
+            nginx -t && systemctl reload nginx && echo "✅ NGINX actualizado"
+            
+            # 13. Limpieza
+            echo "--- Fase 13: Limpiando archivos temporales ---"
+            rm -rf .deploy-backups
+            
+            echo "=== ✅ DESPLIEGUE COMPLETADO CON ÉXITO ==="
+
+      - name: Deployment success notification
+        if: success()
+        run: |
+          echo "::notice::✅ Deployment completed successfully!"
+
+      - name: Deployment failure notification
+        if: failure()
+        run: |
+          echo "::error::❌ Deployment failed! Check the logs."
             fi
             
             # Restaurar archivos críticos del scraper
@@ -262,7 +283,9 @@ jobs:
             # 10. Limpiar archivos temporales del despliegue
             echo "--- Fase 10: Limpiando archivos temporales ---"
             rm -rf .deploy-backups
+            # NUEVO: NO eliminar el backup del workflow, mantenerlo para futuros despliegues
             echo "✅ Directorio temporal .deploy-backups eliminado"
+            echo "ℹ️  Backup de deploy-modified.yml mantenido para futuros despliegues"
 
             echo "✅ FIN: DESPLIEGUE COMPLETADO CON ÉXITO"
 
